--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,15 @@
         <item name="android:textSize">36sp</item>
         <item name="android:textColor">#1C1B1F</item>
     </style>
+
+    <style name="PlantTheme" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/off_white</item>
+    </style>
+
+    <style name="icon_text">
+        <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">0.04</item>
+        <item name="android:textColor">#49454F</item>
+    </style>
 </resources>
