Set up messaging, seeing bugs with messaging, able to send message, not seeing user or user name, signIn bug, etc

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="very_light_purple">#f3f0fb</color>
     <color name="icon_text_color">#49454F</color>
     <color name="colorLightGray">#b4b4b4</color>
+    <color name="colorBlue">#2962FF</color>
 
 </resources>
