--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="off_white">#1F1F1F</color>
     <color name="very_light_purple">#f3f0fb</color>
     <color name="icon_text_color">#49454F</color>
+    <color name="iris">#5D3FD3</color>
 
 </resources>
