updated Login/Signup ui

--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -38,6 +38,7 @@
                 android:id="@+id/login_user_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/custome_background"
                 android:inputType="text"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +57,7 @@
                 android:id="@+id/login_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/custome_background"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,6 +76,8 @@
                 android:layout_marginRight="12dp"
                 android:layout_toStartOf="@id/login_button"
                 android:layout_toLeftOf="@id/login_button"
+                android:backgroundTint="@color/iris"
+                android:background="@drawable/custome_background"
                 android:text="@string/button_login" />
 
             <com.google.android.material.button.MaterialButton
@@ -85,6 +89,7 @@
                 android:layout_marginRight="12dp"
                 android:layout_toStartOf="@id/login_button"
                 android:layout_toLeftOf="@id/login_button"
+                android:background="@drawable/custome_background"
                 android:text="@string/button_signup" />
 
         </LinearLayout>
