--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -13,15 +13,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".views.FavoritesFragment" >
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_favorite_activity"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_favorites_activity"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:layout_constraintBottom_toTopOf="@id/favorites_recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/favorites_recyclerView"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -31,18 +32,19 @@
                 android:layout_gravity="center"
                 android:textAppearance="@style/headline"
                 android:textColor="@color/iris"
-                android:textSize="36sp"
-                android:textStyle="bold" />
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:titleCentered="true" />
 
-            <!-- Profile image to the right with padding -->
             <ImageView
                 android:id="@+id/toolbar_profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/round_account_circle_24" />
-        </androidx.appcompat.widget.Toolbar>
+                android:src="@drawable/round_account_circle_24"
+                />
+        </com.google.android.material.appbar.MaterialToolbar>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/favorites_recyclerView"
@@ -57,8 +59,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_favorite_activity"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_favorites_activity"
             app:spanCount="2"
             tools:listitem="@layout/item_movie_card" />
     </androidx.constraintlayout.widget.ConstraintLayout>
