--- a/app/src/main/res/layout/fragment_search_.xml
+++ b/app/src/main/res/layout/fragment_search_.xml
@@ -14,12 +14,38 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".views.Search_Fragment">
 
-<!--        <include-->
-<!--            layout="@layout/toolbar2"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_search_activity"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_constraintBottom_toTopOf="@id/searchView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAppearance="@style/headline"
+                android:textColor="@color/iris"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:titleCentered="true" />
+
+            <ImageView
+                android:id="@+id/toolbar_profile_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/round_account_circle_24"
+                />
+        </com.google.android.material.appbar.MaterialToolbar>
 
 
         <androidx.appcompat.widget.SearchView
@@ -32,7 +58,7 @@
             app:layout_constraintBottom_toTopOf="@+id/search_recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar_search_activity"  />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_recyclerView"
