update ui and add Splash screen and Icon to app

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -32,7 +32,6 @@
                 android:id="@+id/username_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/custome_background"
                 android:hint="@string/email"
                 android:inputType="text"
                 android:maxLines="1" />
@@ -55,7 +54,6 @@
                 android:id="@+id/password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/custome_background"
                 android:inputType="textPassword"
                 android:maxLength="8" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -76,7 +74,6 @@
                 android:id="@+id/confirm_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/custome_background"
                 android:inputType="textPassword"
                 android:maxLength="8" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -86,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:background="@drawable/custome_background"
+            android:backgroundTint="@color/iris"
             android:layout_marginRight="12dp"
             android:text="@string/button_signup" />
 
@@ -100,17 +97,6 @@
             android:layout_alignParentTop="true"
             android:layout_margin="10dp"
             android:textSize="18sp" />
-
-<!--        <Button-->
-<!--            android:id="@+id/textButton"-->
-<!--            style="@style/Widget.Material3.Button.TextButton"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="12dp"-->
-<!--            android:layout_marginRight="12dp"-->
-<!--            android:text="@string/already_have_an_account_login"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textColor="@color/iris" />-->
 
     </LinearLayout>
 
