update and fix Sign in with google button

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -88,32 +88,18 @@
             android:text="@string/button_signup" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/google_signup_button"
+            app:icon="@drawable/google_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:stateListAnimator="@animator/mtrl_btn_unelevated_state_list_anim"
+            android:textAllCaps="false"
             android:backgroundTint="@color/white"
+            android:textColor="@color/iris"
             android:text="@string/sign_in_with_google"
-            android:textColor="@color/black"
-            android:id="@+id/google_signup_button"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            app:iconTint="@color/black"
-            app:icon="@drawable/google_logo"
-            app:iconSize="20dp"
-            app:iconGravity="start"
-            app:iconPadding="4dp"
-
-
+            app:iconGravity="textStart"
+            app:iconTint="@null"
             />
-
-<!--        <com.google.android.gms.common.SignInButton-->
-<!--            android:id="@+id/google_signup_button"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="5dp"-->
-<!--            android:text="Text"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:textSize="18sp" />-->
 
     </LinearLayout>
 
