update Profile Screen, Only functionality for the logout button and backPress button

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,7 @@
     </style>
 
     <style name="Theme.Movie_Project" parent="Base.Theme.Movie_Project" />
+    <style name="Circular">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
