--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="very_light_purple">#f3f0fb</color>
     <color name="icon_text_color">#49454F</color>
     <color name="iris">#5D3FD3</color>
+    <color name="dark_grey">#454545</color>
+    <color name="light_white">#FCFCFF</color>
 
 </resources>
