--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="@{movie.title}"
-            android:textColor="@android:color/black"
+            android:textColor="@color/dark_grey"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
             android:paddingEnd="8dp"
             android:paddingBottom="8dp"
             android:text="@{movie.voteAverage.toString()}"
-            android:textColor="@android:color/black"
+            android:textColor="@color/dark_grey"
             android:textSize="14sp" />
 
         <TextView
@@ -60,7 +60,7 @@
             android:paddingEnd="8dp"
             android:paddingBottom="8dp"
             android:text="@{movie.overview}"
-            android:textColor="@android:color/black"
+            android:textColor="@color/dark_grey"
             android:textSize="24sp" />
 
     </LinearLayout>
