--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -17,6 +17,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:clipToPadding="false"
+            android:background="@color/light_white"
             android:padding="8dp"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
