--- a/app/src/main/res/layout/item_add.xml
+++ b/app/src/main/res/layout/item_add.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@color/light_white"
         android:padding="8dp">
 
         <RelativeLayout
@@ -38,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:text="Bio"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_grey"
                     android:textSize="16sp"
                     android:textStyle="bold|normal" />
 
@@ -88,7 +89,7 @@
                 <TextView
                     android:text="New York, USA"
                     android:textSize="17sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_grey"
                     android:textStyle="bold"
                     android:gravity="center"
                     android:layout_width="wrap_content"
