--- a/app/src/main/res/layout/item_email.xml
+++ b/app/src/main/res/layout/item_email.xml
@@ -32,7 +32,7 @@
                 android:text="Email"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_grey"
                 />
 
         </LinearLayout>
@@ -45,7 +45,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_grey"
 
             >
 
