--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -13,6 +13,7 @@
         >
         <androidx.cardview.widget.CardView
             android:layout_marginTop="40dp"
+            android:background="@color/light_white"
             app:cardCornerRadius="15dp"
             app:cardElevation="10dp"
             app:cardUseCompatPadding="true"
@@ -30,7 +31,7 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_grey"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <TextView
@@ -40,7 +41,7 @@
                     android:textStyle="normal"
                     android:gravity="center"
                     android:layout_marginBottom="10dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_grey"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -61,7 +62,7 @@
                         android:gravity="center"
                         android:textStyle="bold"
                         android:textSize="14sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_grey"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"/>
                     <View
@@ -74,7 +75,7 @@
                         android:gravity="center"
                         android:textStyle="bold"
                         android:textSize="14sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_grey"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"/>
                     <View
@@ -87,7 +88,7 @@
                         android:gravity="center"
                         android:textStyle="bold"
                         android:textSize="14sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_grey"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"/>
                     <View
