--- a/app/src/main/res/layout/item_movie_card.xml
+++ b/app/src/main/res/layout/item_movie_card.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:background="@color/light_white"
         android:tag="@{movie.title}"
         app:cardCornerRadius="8dp">
 
@@ -40,7 +41,7 @@
                 android:padding="8dp"
                 android:text="@{movie.title}"
                 android:textAppearance="@style/title"
-                android:textColor="@android:color/black"
+                android:textColor="@color/dark_grey"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
