--- a/app/src/main/res/layout/received_messages.xml
+++ b/app/src/main/res/layout/received_messages.xml
@@ -14,6 +14,7 @@
             android:id="@+id/received_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_grey"
             android:padding="10dp"
             android:text="@string/received_messages"
             android:textSize="18sp"/>
