--- a/app/src/main/res/layout/send_layout.xml
+++ b/app/src/main/res/layout/send_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/sent_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/light_white"
             android:padding="10dp"
             android:text="@string/sent_messages"
             android:textSize="18sp"/>
