--- a/app/src/main/res/layout/fragment_search_.xml
+++ b/app/src/main/res/layout/fragment_search_.xml
@@ -37,13 +37,15 @@
                 android:textStyle="bold"
                 app:titleCentered="true" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
+                android:src="@drawable/bw_stockphoto3"
+                app:shapeAppearanceOverlay="@style/Circular"
+                android:scaleType="fitXY"
                 android:id="@+id/toolbar_profile_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/round_account_circle_24"
                 />
         </com.google.android.material.appbar.MaterialToolbar>
 
