--- a/app/src/main/res/layout/item_movie_card.xml
+++ b/app/src/main/res/layout/item_movie_card.xml
@@ -53,7 +53,7 @@
                 android:paddingEnd="8dp"
                 android:paddingBottom="8dp"
                 android:text="@{movie.release_date}"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/dark_grey"
                 android:textSize="14sp" />
 
 
